Fixed boo boo with Close button

--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -120,7 +120,7 @@
       </div>
 
       <!-- New Search Panel (Group) -->
-      <div id="u13" class="ax_default" data-label="New Search Panel" data-left="33" data-top="180" data-width="244" data-height="18">
+      <div id="u13" class="ax_default" data-label="New Search Panel" data-left="28" data-top="180" data-width="250" data-height="645">
 
         <!-- Unnamed (Rectangle) -->
         <div id="u14" class="ax_default box_2 ax_default_hidden" style="display:none; visibility: hidden">
@@ -360,7 +360,7 @@
         </div>
 
         <!-- Process filters (Group) -->
-        <div id="u48" class="ax_default" data-label="Process filters" data-left="32" data-top="544" data-width="244" data-height="247">
+        <div id="u48" class="ax_default" data-label="Process filters" data-left="28" data-top="211" data-width="250" data-height="614">
 
           <!-- Unnamed (Droplist) -->
           <div id="u49" class="ax_default droplist">
@@ -545,7 +545,7 @@
           </div>
 
           <!-- Process buttons (Group) -->
-          <div id="u72" class="ax_default" data-label="Process buttons" data-left="28" data-top="748" data-width="250" data-height="43">
+          <div id="u72" class="ax_default" data-label="Process buttons" data-left="28" data-top="748" data-width="250" data-height="77">
 
             <!-- ADVANCED FILTER (Group) -->
             <div id="u73" class="ax_default" data-label="ADVANCED FILTER" data-left="198" data-top="806" data-width="76" data-height="19">
@@ -618,8 +618,8 @@
           <input id="u82_input" type="checkbox" value="checkbox" title="Start search in a new browser tab."/>
         </div>
 
-        <!-- Unnamed (Rectangle) -->
-        <div id="u83" class="ax_default label">
+        <!-- Close search panel (Rectangle) -->
+        <div id="u83" class="ax_default label" data-label="Close search panel">
           <div id="u83_div" class=""></div>
           <div id="u83_text" class="text ">
             <p><span></span></p>
