--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -311,8 +311,8 @@
           <!-- Process buttons (Group) -->
           <div id="u40" class="ax_default" data-label="Process buttons" data-left="0" data-top="0" data-width="0" data-height="0">
 
-            <!-- Unnamed (Group) -->
-            <div id="u41" class="ax_default" data-left="0" data-top="0" data-width="0" data-height="0">
+            <!-- Task_advanced filter (Group) -->
+            <div id="u41" class="ax_default" data-label="Task_advanced filter" data-left="0" data-top="0" data-width="0" data-height="0">
 
               <!-- Advanced filter link (Rectangle) -->
               <div id="u42" class="ax_default link_button" data-label="Advanced filter link">
@@ -560,8 +560,8 @@
           <!-- Process buttons (Group) -->
           <div id="u74" class="ax_default" data-label="Process buttons" data-left="31" data-top="740" data-width="247" data-height="136">
 
-            <!-- Unnamed (Group) -->
-            <div id="u75" class="ax_default" data-left="159" data-top="857" data-width="103" data-height="19">
+            <!-- Advanced Filter (Group) -->
+            <div id="u75" class="ax_default" data-label="Advanced Filter" data-left="159" data-top="857" data-width="103" data-height="19">
 
               <!-- Advanced filter link (Rectangle) -->
               <div id="u76" class="ax_default link_button" data-label="Advanced filter link">
