--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -635,7 +635,7 @@
         </div>
 
         <!-- Open in new tab (Checkbox) -->
-        <div id="u86" class="ax_default checkbox" data-label="Open in new tab" title="Start search in a new browser tab.">
+        <div id="u86" class="ax_default checkbox ax_default_hidden" data-label="Open in new tab" title="Start search in a new browser tab." style="display:none; visibility: hidden">
           <label for="u86_input" style="position: absolute;">
             <div id="u86_text" class="text ">
               <p><span></span></p>
@@ -5551,6 +5551,14 @@
         <div id="u299_div" class=""></div>
         <div id="u299_text" class="text ">
           <p><span>Selected: None</span></p>
+        </div>
+      </div>
+
+      <!-- new tabby (Rectangle) -->
+      <div id="u300" class="ax_default paragraph" data-label="new tabby" title="Start search in a new tab/window. ">
+        <div id="u300_div" class=""></div>
+        <div id="u300_text" class="text ">
+          <p><span></span></p>
         </div>
       </div>
     </div>
