--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -677,10 +677,10 @@
       </div>
 
       <!-- Toggle button (Group) -->
-      <div id="u88" class="ax_default" data-label="Toggle button" data-left="479" data-top="124" data-width="190" data-height="33">
+      <div id="u88" class="ax_default" data-label="Toggle button" data-left="461" data-top="124" data-width="190" data-height="33">
 
         <!-- filter label group (Group) -->
-        <div id="u89" class="ax_default" data-label="filter label group" data-left="572" data-top="124" data-width="97" data-height="32">
+        <div id="u89" class="ax_default" data-label="filter label group" data-left="554" data-top="124" data-width="97" data-height="32">
 
           <!-- Advanced filter link (Rectangle) -->
           <div id="u90" class="ax_default primary_nav_button" data-label="Advanced filter link">
@@ -1164,7 +1164,7 @@
       <div id="u155" class="ax_default link_button" data-label="Results:#">
         <div id="u155_div" class=""></div>
         <div id="u155_text" class="text ">
-          <p><span style="font-family:'FontAwesome';font-weight:400;"></span><span style="font-family:'Monaco';font-weight:400;"> </span><span style="font-family:'OpenSans-Bold', 'Open Sans Bold', 'Open Sans';font-weight:700;">Filters</span></p>
+          <p><span>Filters:</span></p>
         </div>
       </div>
 
