--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -1780,12 +1780,12 @@
         <div id="u155" class="ax_default heading_1" data-label="title">
           <div id="u155_div" class=""></div>
           <div id="u155_text" class="text ">
-            <p><span>Display Preferences</span></p>
+            <p><span>Results Preferences</span></p>
           </div>
         </div>
 
         <!-- column checks (Group) -->
-        <div id="u156" class="ax_default" data-label="column checks" data-left="87" data-top="279" data-width="194" data-height="255">
+        <div id="u156" class="ax_default" data-label="column checks" data-left="87" data-top="279" data-width="193" data-height="255">
 
           <!-- Unnamed (Checkbox) -->
           <div id="u157" class="ax_default checkbox">
@@ -1901,48 +1901,77 @@
           <img id="u168_img" class="img " src="images/home/u168.png"/>
         </div>
 
-        <!-- Unnamed (Droplist) -->
-        <div id="u169" class="ax_default list_box">
-          <select id="u169_input">
-            <option value="1">1</option>
-            <option value="5">5</option>
-            <option value="10">10</option>
-            <option selected value="25">25</option>
-            <option value="50">50</option>
-          </select>
+        <!-- Unnamed (Rectangle) -->
+        <div id="u169" class="ax_default paragraph">
+          <div id="u169_div" class=""></div>
+          <div id="u169_text" class="text ">
+            <p><span>Select the maximum number of items to display per view.</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (Rectangle) -->
         <div id="u170" class="ax_default paragraph">
           <div id="u170_div" class=""></div>
           <div id="u170_text" class="text ">
-            <p><span>Select number of items to display</span></p>
+            <p><span>Results per view</span></p>
           </div>
         </div>
 
-        <!-- Unnamed (Rectangle) -->
-        <div id="u171" class="ax_default paragraph">
-          <div id="u171_div" class=""></div>
-          <div id="u171_text" class="text ">
-            <p><span>Results per view</span></p>
-          </div>
+        <!-- Unnamed (Radio Button) -->
+        <div id="u171" class="ax_default radio_button">
+          <label for="u171_input" style="position: absolute;">
+            <div id="u171_text" class="text ">
+              <p><span>&nbsp;5 results</span></p>
+            </div>
+          </label>
+          <input id="u171_input" type="radio" value="radio" name="u171"/>
+        </div>
+
+        <!-- Unnamed (Radio Button) -->
+        <div id="u172" class="ax_default radio_button">
+          <label for="u172_input" style="position: absolute;">
+            <div id="u172_text" class="text ">
+              <p><span>&nbsp;10 results (default)</span></p>
+            </div>
+          </label>
+          <input id="u172_input" type="radio" value="radio" name="u172" checked/>
+        </div>
+
+        <!-- Unnamed (Radio Button) -->
+        <div id="u173" class="ax_default radio_button">
+          <label for="u173_input" style="position: absolute;">
+            <div id="u173_text" class="text ">
+              <p><span>&nbsp;25 results</span></p>
+            </div>
+          </label>
+          <input id="u173_input" type="radio" value="radio" name="u173"/>
+        </div>
+
+        <!-- Unnamed (Radio Button) -->
+        <div id="u174" class="ax_default radio_button">
+          <label for="u174_input" style="position: absolute;">
+            <div id="u174_text" class="text ">
+              <p><span>&nbsp;50 items</span></p>
+            </div>
+          </label>
+          <input id="u174_input" type="radio" value="radio" name="u174"/>
         </div>
       </div>
 
       <!-- New Search Panel (Group) -->
-      <div id="u172" class="ax_default" data-label="New Search Panel" data-left="68" data-top="172" data-width="231" data-height="651">
+      <div id="u175" class="ax_default" data-label="New Search Panel" data-left="68" data-top="172" data-width="231" data-height="651">
 
         <!-- left panel (Rectangle) -->
-        <div id="u173" class="ax_default box_2" data-label="left panel">
-          <div id="u173_div" class=""></div>
+        <div id="u176" class="ax_default box_2" data-label="left panel">
+          <div id="u176_div" class=""></div>
         </div>
 
         <!-- Process filters (Group) -->
-        <div id="u174" class="ax_default" data-label="Process filters" data-left="77" data-top="547" data-width="213" data-height="244">
+        <div id="u177" class="ax_default" data-label="Process filters" data-left="77" data-top="547" data-width="213" data-height="244">
 
           <!-- Unnamed (Droplist) -->
-          <div id="u175" class="ax_default list_box">
-            <select id="u175_input">
+          <div id="u178" class="ax_default list_box">
+            <select id="u178_input">
               <option value="Process Instance ID">Process Instance ID</option>
               <option value="Initiator">Initiator</option>
               <option value="Correlation Key">Correlation Key</option>
@@ -1953,68 +1982,68 @@
           </div>
 
           <!-- Unnamed (Rectangle) -->
-          <div id="u176" class="ax_default link_button">
-            <div id="u176_div" class=""></div>
-            <div id="u176_text" class="text ">
+          <div id="u179" class="ax_default link_button">
+            <div id="u179_div" class=""></div>
+            <div id="u179_text" class="text ">
               <p><span>Start Date </span></p>
             </div>
           </div>
 
           <!-- Unnamed (Shape) -->
-          <div id="u177" class="ax_default icon">
-            <img id="u177_img" class="img " src="images/home/u177.png"/>
+          <div id="u180" class="ax_default icon">
+            <img id="u180_img" class="img " src="images/home/u180.png"/>
           </div>
 
           <!-- Text wildcard (Text Field) -->
-          <div id="u178" class="ax_default text_field" data-label="Text wildcard">
-            <input id="u178_input" type="text" value=""/>
+          <div id="u181" class="ax_default text_field" data-label="Text wildcard">
+            <input id="u181_input" type="text" value=""/>
           </div>
 
           <!-- errors (Group) -->
-          <div id="u179" class="ax_default" data-label="errors" data-left="77" data-top="439" data-width="212" data-height="96">
+          <div id="u182" class="ax_default" data-label="errors" data-left="77" data-top="439" data-width="212" data-height="96">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u180" class="ax_default box_1">
-              <div id="u180_div" class=""></div>
+            <div id="u183" class="ax_default box_1">
+              <div id="u183_div" class=""></div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u181" class="ax_default link_button">
-              <div id="u181_div" class=""></div>
-              <div id="u181_text" class="text ">
+            <div id="u184" class="ax_default link_button">
+              <div id="u184_div" class=""></div>
+              <div id="u184_text" class="text ">
                 <p><span>Errors</span></p>
               </div>
             </div>
 
             <!-- With (Checkbox) -->
-            <div id="u182" class="ax_default checkbox" data-label="With">
-              <label for="u182_input" style="position: absolute;">
-                <div id="u182_text" class="text ">
+            <div id="u185" class="ax_default checkbox" data-label="With">
+              <label for="u185_input" style="position: absolute;">
+                <div id="u185_text" class="text ">
                   <p><span>With errors</span></p>
                 </div>
               </label>
-              <input id="u182_input" type="checkbox" value="checkbox"/>
+              <input id="u185_input" type="checkbox" value="checkbox"/>
             </div>
 
             <!-- Without (Checkbox) -->
-            <div id="u183" class="ax_default checkbox" data-label="Without">
-              <label for="u183_input" style="position: absolute;">
-                <div id="u183_text" class="text ">
+            <div id="u186" class="ax_default checkbox" data-label="Without">
+              <label for="u186_input" style="position: absolute;">
+                <div id="u186_text" class="text ">
                   <p><span>Without errors</span></p>
                 </div>
               </label>
-              <input id="u183_input" type="checkbox" value="checkbox"/>
+              <input id="u186_input" type="checkbox" value="checkbox"/>
             </div>
 
             <!-- Unnamed (Shape) -->
-            <div id="u184" class="ax_default icon">
-              <img id="u184_img" class="img " src="images/home/u184.png"/>
+            <div id="u187" class="ax_default icon">
+              <img id="u187_img" class="img " src="images/home/u187.png"/>
             </div>
           </div>
 
           <!-- Unnamed (Droplist) -->
-          <div id="u185" class="ax_default droplist">
-            <select id="u185_input">
+          <div id="u188" class="ax_default droplist">
+            <select id="u188_input">
               <option selected value="Select">Select</option>
               <option value="Today">Today</option>
               <option value="Yesterday">Yesterday</option>
@@ -2025,16 +2054,16 @@
           </div>
 
           <!-- Unnamed (Rectangle) -->
-          <div id="u186" class="ax_default link_button">
-            <div id="u186_div" class=""></div>
-            <div id="u186_text" class="text ">
+          <div id="u189" class="ax_default link_button">
+            <div id="u189_div" class=""></div>
+            <div id="u189_text" class="text ">
               <p><span>Last Update</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Droplist) -->
-          <div id="u187" class="ax_default droplist">
-            <select id="u187_input">
+          <div id="u190" class="ax_default droplist">
+            <select id="u190_input">
               <option selected value="Select">Select</option>
               <option value="Today">Today</option>
               <option value="Yesterday">Yesterday</option>
@@ -2045,76 +2074,46 @@
           </div>
 
           <!-- Unnamed (Shape) -->
-          <div id="u188" class="ax_default icon">
-            <img id="u188_img" class="img " src="images/home/u177.png"/>
+          <div id="u191" class="ax_default icon">
+            <img id="u191_img" class="img " src="images/home/u180.png"/>
           </div>
 
           <!-- Unnamed (Horizontal Line) -->
-          <div id="u189" class="ax_default line">
-            <img id="u189_img" class="img " src="images/home/u189.png"/>
+          <div id="u192" class="ax_default line">
+            <img id="u192_img" class="img " src="images/home/u192.png"/>
           </div>
 
           <!-- Apply again (Rectangle) -->
-          <div id="u190" class="ax_default button" data-label="Apply again">
-            <div id="u190_div" class=""></div>
-            <div id="u190_text" class="text ">
+          <div id="u193" class="ax_default button" data-label="Apply again">
+            <div id="u193_div" class=""></div>
+            <div id="u193_text" class="text ">
               <p><span>Apply</span></p>
             </div>
           </div>
 
           <!-- State filters (Group) -->
-          <div id="u191" class="ax_default" data-label="State filters" data-left="77" data-top="222" data-width="211" data-height="209">
+          <div id="u194" class="ax_default" data-label="State filters" data-left="77" data-top="222" data-width="211" data-height="209">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u192" class="ax_default box_1">
-              <div id="u192_div" class=""></div>
+            <div id="u195" class="ax_default box_1">
+              <div id="u195_div" class=""></div>
             </div>
 
             <!-- Active (Checkbox) -->
-            <div id="u193" class="ax_default checkbox" data-label="Active">
-              <label for="u193_input" style="position: absolute;">
-                <div id="u193_text" class="text ">
-                  <p><span>Active</span></p>
-                </div>
-              </label>
-              <input id="u193_input" type="checkbox" value="checkbox"/>
-            </div>
-
-            <!-- In-Progress (Checkbox) -->
-            <div id="u194" class="ax_default checkbox" data-label="In-Progress">
-              <label for="u194_input" style="position: absolute;">
-                <div id="u194_text" class="text ">
-                  <p><span>In-Progress</span></p>
-                </div>
-              </label>
-              <input id="u194_input" type="checkbox" value="checkbox"/>
-            </div>
-
-            <!-- Unnamed (Checkbox) -->
-            <div id="u195" class="ax_default checkbox">
-              <label for="u195_input" style="position: absolute;">
-                <div id="u195_text" class="text ">
-                  <p><span>Aborted</span></p>
-                </div>
-              </label>
-              <input id="u195_input" type="checkbox" value="checkbox"/>
-            </div>
-
-            <!-- Unnamed (Checkbox) -->
-            <div id="u196" class="ax_default checkbox">
+            <div id="u196" class="ax_default checkbox" data-label="Active">
               <label for="u196_input" style="position: absolute;">
                 <div id="u196_text" class="text ">
-                  <p><span>Completed</span></p>
+                  <p><span>Active</span></p>
                 </div>
               </label>
               <input id="u196_input" type="checkbox" value="checkbox"/>
             </div>
 
-            <!-- Unnamed (Checkbox) -->
-            <div id="u197" class="ax_default checkbox">
+            <!-- In-Progress (Checkbox) -->
+            <div id="u197" class="ax_default checkbox" data-label="In-Progress">
               <label for="u197_input" style="position: absolute;">
                 <div id="u197_text" class="text ">
-                  <p><span>Suspended</span></p>
+                  <p><span>In-Progress</span></p>
                 </div>
               </label>
               <input id="u197_input" type="checkbox" value="checkbox"/>
@@ -2124,54 +2123,84 @@
             <div id="u198" class="ax_default checkbox">
               <label for="u198_input" style="position: absolute;">
                 <div id="u198_text" class="text ">
-                  <p><span>Pending</span></p>
+                  <p><span>Aborted</span></p>
                 </div>
               </label>
               <input id="u198_input" type="checkbox" value="checkbox"/>
             </div>
 
+            <!-- Unnamed (Checkbox) -->
+            <div id="u199" class="ax_default checkbox">
+              <label for="u199_input" style="position: absolute;">
+                <div id="u199_text" class="text ">
+                  <p><span>Completed</span></p>
+                </div>
+              </label>
+              <input id="u199_input" type="checkbox" value="checkbox"/>
+            </div>
+
+            <!-- Unnamed (Checkbox) -->
+            <div id="u200" class="ax_default checkbox">
+              <label for="u200_input" style="position: absolute;">
+                <div id="u200_text" class="text ">
+                  <p><span>Suspended</span></p>
+                </div>
+              </label>
+              <input id="u200_input" type="checkbox" value="checkbox"/>
+            </div>
+
+            <!-- Unnamed (Checkbox) -->
+            <div id="u201" class="ax_default checkbox">
+              <label for="u201_input" style="position: absolute;">
+                <div id="u201_text" class="text ">
+                  <p><span>Pending</span></p>
+                </div>
+              </label>
+              <input id="u201_input" type="checkbox" value="checkbox"/>
+            </div>
+
             <!-- Unnamed (Rectangle) -->
-            <div id="u199" class="ax_default link_button">
-              <div id="u199_div" class=""></div>
-              <div id="u199_text" class="text ">
+            <div id="u202" class="ax_default link_button">
+              <div id="u202_div" class=""></div>
+              <div id="u202_text" class="text ">
                 <p><span>State</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Shape) -->
-            <div id="u200" class="ax_default icon">
-              <img id="u200_img" class="img " src="images/home/u184.png"/>
+            <div id="u203" class="ax_default icon">
+              <img id="u203_img" class="img " src="images/home/u187.png"/>
             </div>
           </div>
 
           <!-- Unnamed (Horizontal Line) -->
-          <div id="u201" class="ax_default line">
-            <img id="u201_img" class="img " src="images/home/u201.png"/>
+          <div id="u204" class="ax_default line">
+            <img id="u204_img" class="img " src="images/home/u204.png"/>
           </div>
 
           <!-- Unnamed (Horizontal Line) -->
-          <div id="u202" class="ax_default line">
-            <img id="u202_img" class="img " src="images/home/u189.png"/>
+          <div id="u205" class="ax_default line">
+            <img id="u205_img" class="img " src="images/home/u192.png"/>
           </div>
         </div>
 
         <!-- close (Rectangle) -->
-        <div id="u203" class="ax_default label" data-label="close">
-          <div id="u203_div" class=""></div>
-          <div id="u203_text" class="text ">
+        <div id="u206" class="ax_default label" data-label="close">
+          <div id="u206_div" class=""></div>
+          <div id="u206_text" class="text ">
             <p><span></span></p>
           </div>
         </div>
 
         <!-- Unnamed (Vertical Line) -->
-        <div id="u204" class="ax_default line">
-          <img id="u204_img" class="img " src="images/home/u204.png"/>
+        <div id="u207" class="ax_default line">
+          <img id="u207_img" class="img " src="images/home/u207.png"/>
         </div>
 
         <!-- title (Rectangle) -->
-        <div id="u205" class="ax_default heading_1" data-label="title">
-          <div id="u205_div" class=""></div>
-          <div id="u205_text" class="text ">
+        <div id="u208" class="ax_default heading_1" data-label="title">
+          <div id="u208_div" class=""></div>
+          <div id="u208_text" class="text ">
             <p><span>Basic Filters</span></p>
           </div>
         </div>
