--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -1307,7 +1307,7 @@
       </div>
 
       <!-- Unnamed (Group) -->
-      <div id="u89" class="ax_default" data-left="640" data-top="177" data-width="124" data-height="24">
+      <div id="u89" class="ax_default" data-left="616" data-top="178" data-width="124" data-height="24">
 
         <!-- clear filters (Rectangle) -->
         <div id="u90" class="ax_default link_button" data-label="clear filters">
@@ -1612,7 +1612,7 @@
       <div id="u130" class="ax_default" data-label="Docks" data-left="37" data-top="172" data-width="32" data-height="125">
 
         <!-- Advanced filter dock (Rectangle) -->
-        <div id="u131" class="ax_default box_1" data-label="Advanced filter dock" title="Advanced Filter">
+        <div id="u131" class="ax_default box_1" data-label="Advanced filter dock" title="Advanced filter">
           <div id="u131_div" class=""></div>
           <div id="u131_text" class="text ">
             <p><span style="font-family:'FontAwesome';font-weight:400;font-size:18px;"></span><span style="font-family:'OpenSans-Extrabold', 'Open Sans Extrabold', 'Open Sans';font-weight:800;">+</span></p>
@@ -1628,7 +1628,7 @@
         </div>
 
         <!-- star (Rectangle) -->
-        <div id="u133" class="ax_default box_1" data-label="star" title="Saved Filter Queries">
+        <div id="u133" class="ax_default box_1" data-label="star" title="Saved filter queries">
           <div id="u133_div" class=""></div>
           <div id="u133_text" class="text ">
             <p><span></span></p>
@@ -1951,7 +1951,7 @@
         <div id="u174" class="ax_default radio_button">
           <label for="u174_input" style="position: absolute;">
             <div id="u174_text" class="text ">
-              <p><span>&nbsp;50 items</span></p>
+              <p><span>&nbsp;50 results</span></p>
             </div>
           </label>
           <input id="u174_input" type="radio" value="radio" name="u174"/>
@@ -1967,7 +1967,7 @@
         </div>
 
         <!-- Process filters (Group) -->
-        <div id="u177" class="ax_default" data-label="Process filters" data-left="77" data-top="547" data-width="213" data-height="244">
+        <div id="u177" class="ax_default" data-label="Process filters" data-left="77" data-top="222" data-width="213" data-height="569">
 
           <!-- Unnamed (Droplist) -->
           <div id="u178" class="ax_default list_box">
@@ -2203,6 +2203,14 @@
           <div id="u208_text" class="text ">
             <p><span>Basic Filters</span></p>
           </div>
+        </div>
+      </div>
+
+      <!-- KVP-expression (Rectangle) -->
+      <div id="u209" class="ax_default box_2 ax_default_hidden" data-label="KVP-expression" style="display:none; visibility: hidden">
+        <div id="u209_div" class=""></div>
+        <div id="u209_text" class="text ">
+          <p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;">Process Instance ID is greater than #&nbsp; &nbsp; </span><span style="font-family:'OpenSans-Bold', 'Open Sans Bold', 'Open Sans';font-weight:700;color:#169BD5;">x</span></p>
         </div>
       </div>
     </div>
