--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -1924,7 +1924,7 @@
               <p><span>&nbsp;5 results</span></p>
             </div>
           </label>
-          <input id="u171_input" type="radio" value="radio" name="u171"/>
+          <input id="u171_input" type="radio" value="radio" name="per view"/>
         </div>
 
         <!-- Unnamed (Radio Button) -->
@@ -1934,7 +1934,7 @@
               <p><span>&nbsp;10 results (default)</span></p>
             </div>
           </label>
-          <input id="u172_input" type="radio" value="radio" name="u172" checked/>
+          <input id="u172_input" type="radio" value="radio" name="per view" checked/>
         </div>
 
         <!-- Unnamed (Radio Button) -->
@@ -1944,7 +1944,7 @@
               <p><span>&nbsp;25 results</span></p>
             </div>
           </label>
-          <input id="u173_input" type="radio" value="radio" name="u173"/>
+          <input id="u173_input" type="radio" value="radio" name="per view"/>
         </div>
 
         <!-- Unnamed (Radio Button) -->
@@ -1954,7 +1954,7 @@
               <p><span>&nbsp;50 results</span></p>
             </div>
           </label>
-          <input id="u174_input" type="radio" value="radio" name="u174"/>
+          <input id="u174_input" type="radio" value="radio" name="per view"/>
         </div>
       </div>
 
@@ -1967,7 +1967,7 @@
         </div>
 
         <!-- Process filters (Group) -->
-        <div id="u177" class="ax_default" data-label="Process filters" data-left="77" data-top="222" data-width="213" data-height="569">
+        <div id="u177" class="ax_default" data-label="Process filters" data-left="77" data-top="547" data-width="213" data-height="244">
 
           <!-- Unnamed (Droplist) -->
           <div id="u178" class="ax_default list_box">
