--- a/design/Manage-section/page_1.html
+++ b/design/Manage-section/page_1.html
@@ -25,19 +25,19 @@
     <div id="base" class="">
 
       <!-- Select type (Group) -->
-      <div id="u402" class="ax_default" data-label="Select type" data-left="29" data-top="106" data-width="222" data-height="40">
+      <div id="u380" class="ax_default" data-label="Select type" data-left="29" data-top="106" data-width="222" data-height="40">
 
         <!-- label (Rectangle) -->
-        <div id="u403" class="ax_default label" data-label="label">
-          <div id="u403_div" class=""></div>
-          <div id="u403_text" class="text ">
+        <div id="u381" class="ax_default label" data-label="label">
+          <div id="u381_div" class=""></div>
+          <div id="u381_text" class="text ">
             <p><span>Filter Type</span></p>
           </div>
         </div>
 
         <!-- Type dropdown (Droplist) -->
-        <div id="u404" class="ax_default droplist" data-label="Type dropdown">
-          <select id="u404_input">
+        <div id="u382" class="ax_default droplist" data-label="Type dropdown">
+          <select id="u382_input">
             <option selected value="none selected">none selected</option>
             <option value="processInstanceID">processInstanceID</option>
             <option value="processID">processID</option>
@@ -60,155 +60,155 @@
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u405" class="ax_default box_2">
-        <div id="u405_div" class=""></div>
+      <div id="u383" class="ax_default box_2">
+        <div id="u383_div" class=""></div>
       </div>
 
       <!-- Results (Dynamic Panel) -->
-      <div id="u406" class="ax_default" data-label="Results">
-        <div id="u406_state0" class="panel_state" data-label="State1" style="">
-          <div id="u406_state0_content" class="panel_state_content">
+      <div id="u384" class="ax_default" data-label="Results">
+        <div id="u384_state0" class="panel_state" data-label="State1" style="">
+          <div id="u384_state0_content" class="panel_state_content">
 
             <!-- Results_type (Text Field) -->
-            <div id="u407" class="ax_default text_field" data-label="Results_type">
-              <input id="u407_input" type="text" value="" readonly/>
+            <div id="u385" class="ax_default text_field" data-label="Results_type">
+              <input id="u385_input" type="text" value="" readonly/>
             </div>
 
             <!-- Results_expression (Text Field) -->
-            <div id="u408" class="ax_default text_field" data-label="Results_expression">
-              <input id="u408_input" type="text" value="" readonly/>
+            <div id="u386" class="ax_default text_field" data-label="Results_expression">
+              <input id="u386_input" type="text" value="" readonly/>
             </div>
 
             <!-- Results_value (Text Field) -->
-            <div id="u409" class="ax_default text_field" data-label="Results_value">
-              <input id="u409_input" type="text" value="" readonly/>
+            <div id="u387" class="ax_default text_field" data-label="Results_value">
+              <input id="u387_input" type="text" value="" readonly/>
             </div>
           </div>
         </div>
       </div>
 
       <!-- Values (Dynamic Panel) -->
-      <div id="u410" class="ax_default ax_default_hidden" data-label="Values" style="display:none; visibility: hidden">
-        <div id="u410_state0" class="panel_state" data-label="State1" style="">
-          <div id="u410_state0_content" class="panel_state_content">
+      <div id="u388" class="ax_default ax_default_hidden" data-label="Values" style="display:none; visibility: hidden">
+        <div id="u388_state0" class="panel_state" data-label="State1" style="">
+          <div id="u388_state0_content" class="panel_state_content">
 
             <!-- # value (Text Field) -->
-            <div id="u411" class="ax_default text_field" data-label="# value">
-              <input id="u411_input" type="text" value=""/>
+            <div id="u389" class="ax_default text_field" data-label="# value">
+              <input id="u389_input" type="text" value=""/>
             </div>
 
             <!-- # radio (Radio Button) -->
-            <div id="u412" class="ax_default radio_button" data-label="# radio">
-              <label for="u412_input" style="position: absolute;">
-                <div id="u412_text" class="text ">
+            <div id="u390" class="ax_default radio_button" data-label="# radio">
+              <label for="u390_input" style="position: absolute;">
+                <div id="u390_text" class="text ">
                   <p><span>Numeric value</span></p>
                 </div>
               </label>
-              <input id="u412_input" type="radio" value="radio" name="u412" checked/>
+              <input id="u390_input" type="radio" value="radio" name="u390" checked/>
             </div>
 
             <!-- null (Radio Button) -->
-            <div id="u413" class="ax_default radio_button" data-label="null">
-              <label for="u413_input" style="position: absolute;">
-                <div id="u413_text" class="text ">
+            <div id="u391" class="ax_default radio_button" data-label="null">
+              <label for="u391_input" style="position: absolute;">
+                <div id="u391_text" class="text ">
                   <p><span>&quot;Null&quot; </span></p>
                 </div>
               </label>
-              <input id="u413_input" type="radio" value="radio" name="u413"/>
+              <input id="u391_input" type="radio" value="radio" name="u391"/>
             </div>
           </div>
         </div>
       </div>
 
       <!-- expressions (Dynamic Panel) -->
-      <div id="u414" class="ax_default ax_default_hidden" data-label="expressions" style="display:none; visibility: hidden">
-        <div id="u414_state0" class="panel_state" data-label="State1" style="">
-          <div id="u414_state0_content" class="panel_state_content">
+      <div id="u392" class="ax_default ax_default_hidden" data-label="expressions" style="display:none; visibility: hidden">
+        <div id="u392_state0" class="panel_state" data-label="State1" style="">
+          <div id="u392_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u415" class="ax_default box_1">
-              <div id="u415_div" class=""></div>
-              <div id="u415_text" class="text ">
+            <div id="u393" class="ax_default box_1">
+              <div id="u393_div" class=""></div>
+              <div id="u393_text" class="text ">
                 <p><span>Does</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u416" class="ax_default box_1">
-              <div id="u416_div" class=""></div>
-              <div id="u416_text" class="text ">
+            <div id="u394" class="ax_default box_1">
+              <div id="u394_div" class=""></div>
+              <div id="u394_text" class="text ">
                 <p><span>Is</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u417" class="ax_default box_1">
-              <div id="u417_div" class=""></div>
-              <div id="u417_text" class="text ">
+            <div id="u395" class="ax_default box_1">
+              <div id="u395_div" class=""></div>
+              <div id="u395_text" class="text ">
                 <p><span>In</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u418" class="ax_default box_1">
-              <div id="u418_div" class=""></div>
-              <div id="u418_text" class="text ">
+            <div id="u396" class="ax_default box_1">
+              <div id="u396_div" class=""></div>
+              <div id="u396_text" class="text ">
                 <p><span>Not</span></p>
               </div>
             </div>
 
             <!-- Between (Rectangle) -->
-            <div id="u419" class="ax_default box_1" data-label="Between">
-              <div id="u419_div" class=""></div>
-              <div id="u419_text" class="text ">
+            <div id="u397" class="ax_default box_1" data-label="Between">
+              <div id="u397_div" class=""></div>
+              <div id="u397_text" class="text ">
                 <p><span>Between</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u420" class="ax_default box_1">
-              <div id="u420_div" class=""></div>
-              <div id="u420_text" class="text ">
+            <div id="u398" class="ax_default box_1">
+              <div id="u398_div" class=""></div>
+              <div id="u398_text" class="text ">
                 <p><span>Like</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u421" class="ax_default box_1">
-              <div id="u421_div" class=""></div>
-              <div id="u421_text" class="text ">
+            <div id="u399" class="ax_default box_1">
+              <div id="u399_div" class=""></div>
+              <div id="u399_text" class="text ">
                 <p><span>=</span></p>
               </div>
             </div>
 
             <!-- greater than (Rectangle) -->
-            <div id="u422" class="ax_default box_1" data-label="greater than">
-              <div id="u422_div" class=""></div>
-              <div id="u422_text" class="text ">
+            <div id="u400" class="ax_default box_1" data-label="greater than">
+              <div id="u400_div" class=""></div>
+              <div id="u400_text" class="text ">
                 <p><span>&gt;</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u423" class="ax_default box_1">
-              <div id="u423_div" class=""></div>
-              <div id="u423_text" class="text ">
+            <div id="u401" class="ax_default box_1">
+              <div id="u401_div" class=""></div>
+              <div id="u401_text" class="text ">
                 <p><span>&lt;</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u424" class="ax_default box_1">
-              <div id="u424_div" class=""></div>
-              <div id="u424_text" class="text ">
+            <div id="u402" class="ax_default box_1">
+              <div id="u402_div" class=""></div>
+              <div id="u402_text" class="text ">
                 <p><span>&lt; =</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u425" class="ax_default box_1">
-              <div id="u425_div" class=""></div>
-              <div id="u425_text" class="text ">
+            <div id="u403" class="ax_default box_1">
+              <div id="u403_div" class=""></div>
+              <div id="u403_text" class="text ">
                 <p><span>&lt; =</span></p>
               </div>
             </div>
@@ -217,61 +217,61 @@
       </div>
 
       <!-- clear (Rectangle) -->
-      <div id="u426" class="ax_default link_button ax_default_hidden" data-label="clear" style="display:none; visibility: hidden">
-        <div id="u426_div" class=""></div>
-        <div id="u426_text" class="text ">
+      <div id="u404" class="ax_default link_button ax_default_hidden" data-label="clear" style="display:none; visibility: hidden">
+        <div id="u404_div" class=""></div>
+        <div id="u404_text" class="text ">
           <p><span>Clear</span></p>
         </div>
       </div>
 
       <!-- final save (Dynamic Panel) -->
-      <div id="u427" class="ax_default ax_default_hidden" data-label="final save" style="display:none; visibility: hidden">
-        <div id="u427_state0" class="panel_state" data-label="State1" style="">
-          <div id="u427_state0_content" class="panel_state_content">
+      <div id="u405" class="ax_default ax_default_hidden" data-label="final save" style="display:none; visibility: hidden">
+        <div id="u405_state0" class="panel_state" data-label="State1" style="">
+          <div id="u405_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u428" class="ax_default label">
-              <div id="u428_div" class=""></div>
-              <div id="u428_text" class="text ">
+            <div id="u406" class="ax_default label">
+              <div id="u406_div" class=""></div>
+              <div id="u406_text" class="text ">
                 <p><span>Name</span></p>
               </div>
             </div>
 
             <!-- Name (Text Field) -->
-            <div id="u429" class="ax_default text_field" data-label="Name">
-              <input id="u429_input" type="text" value=""/>
+            <div id="u407" class="ax_default text_field" data-label="Name">
+              <input id="u407_input" type="text" value=""/>
             </div>
 
             <!-- Unnamed (Rectangle) -->
-            <div id="u430" class="ax_default label">
-              <div id="u430_div" class=""></div>
-              <div id="u430_text" class="text ">
+            <div id="u408" class="ax_default label">
+              <div id="u408_div" class=""></div>
+              <div id="u408_text" class="text ">
                 <p><span>Description (optional)</span></p>
               </div>
             </div>
 
             <!-- Desc (Text Area) -->
-            <div id="u431" class="ax_default text_area" data-label="Desc">
-              <textarea id="u431_input"></textarea>
+            <div id="u409" class="ax_default text_area" data-label="Desc">
+              <textarea id="u409_input"></textarea>
             </div>
 
             <!-- buttons2 (Dynamic Panel) -->
-            <div id="u432" class="ax_default" data-label="buttons2">
-              <div id="u432_state0" class="panel_state" data-label="State1" style="">
-                <div id="u432_state0_content" class="panel_state_content">
+            <div id="u410" class="ax_default" data-label="buttons2">
+              <div id="u410_state0" class="panel_state" data-label="State1" style="">
+                <div id="u410_state0_content" class="panel_state_content">
 
                   <!-- Save (Rectangle) -->
-                  <div id="u433" class="ax_default primary_button" data-label="Save">
-                    <div id="u433_div" class=""></div>
-                    <div id="u433_text" class="text ">
+                  <div id="u411" class="ax_default primary_button" data-label="Save">
+                    <div id="u411_div" class=""></div>
+                    <div id="u411_text" class="text ">
                       <p><span>Save</span></p>
                     </div>
                   </div>
 
                   <!-- Cancel (Rectangle) -->
-                  <div id="u434" class="ax_default button" data-label="Cancel">
-                    <div id="u434_div" class=""></div>
-                    <div id="u434_text" class="text ">
+                  <div id="u412" class="ax_default button" data-label="Cancel">
+                    <div id="u412_div" class=""></div>
+                    <div id="u412_text" class="text ">
                       <p><span>Cancel</span></p>
                     </div>
                   </div>
@@ -283,46 +283,46 @@
       </div>
 
       <!-- create (Rectangle) -->
-      <div id="u435" class="ax_default label" data-label="create">
-        <div id="u435_div" class=""></div>
-        <div id="u435_text" class="text ">
+      <div id="u413" class="ax_default label" data-label="create">
+        <div id="u413_div" class=""></div>
+        <div id="u413_text" class="text ">
           <p><span>Create Advanced Search</span></p>
         </div>
       </div>
 
       <!-- select? (Rectangle) -->
-      <div id="u436" class="ax_default label" data-label="select?">
-        <div id="u436_div" class=""></div>
-        <div id="u436_text" class="text ">
+      <div id="u414" class="ax_default label" data-label="select?">
+        <div id="u414_div" class=""></div>
+        <div id="u414_text" class="text ">
           <p><span>Select</span></p>
         </div>
       </div>
 
       <!-- add more? (Rectangle) -->
-      <div id="u437" class="ax_default label ax_default_hidden" data-label="add more?" style="display:none; visibility: hidden">
-        <div id="u437_div" class=""></div>
-        <div id="u437_text" class="text ">
+      <div id="u415" class="ax_default label ax_default_hidden" data-label="add more?" style="display:none; visibility: hidden">
+        <div id="u415_div" class=""></div>
+        <div id="u415_text" class="text ">
           <p><span>Add more (optional)</span></p>
         </div>
       </div>
 
       <!-- save as (Rectangle) -->
-      <div id="u438" class="ax_default label ax_default_hidden" data-label="save as" style="display:none; visibility: hidden">
-        <div id="u438_div" class=""></div>
-        <div id="u438_text" class="text ">
+      <div id="u416" class="ax_default label ax_default_hidden" data-label="save as" style="display:none; visibility: hidden">
+        <div id="u416_div" class=""></div>
+        <div id="u416_text" class="text ">
           <p><span>Save Search</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u439" class="ax_default line ax_default_hidden" style="display:none; visibility: hidden">
-        <img id="u439_img" class="img " src="images/home/u68.png"/>
+      <div id="u417" class="ax_default line ax_default_hidden" style="display:none; visibility: hidden">
+        <img id="u417_img" class="img " src="images/page_1/u417.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u440" class="ax_default paragraph">
-        <div id="u440_div" class=""></div>
-        <div id="u440_text" class="text ">
+      <div id="u418" class="ax_default paragraph">
+        <div id="u418_div" class=""></div>
+        <div id="u418_text" class="text ">
           <p><span style="font-family:'FontAwesome';">&nbsp; </span><span style="font-family:'OpenSans', 'Open Sans';font-size:10px;">Back to List</span></p>
         </div>
       </div>
