--- a/design/Process-admin/home.html
+++ b/design/Process-admin/home.html
@@ -2071,7 +2071,7 @@
       </div>
 
       <!-- pagination (Group) -->
-      <div id="u175" class="ax_default" data-label="pagination" data-left="601" data-top="828" data-width="267" data-height="25">
+      <div id="u175" class="ax_default" data-label="pagination" data-left="627" data-top="778" data-width="272" data-height="25">
 
         <!-- NEXT (Rectangle) -->
         <div id="u176" class="ax_default button" data-label="NEXT">
@@ -2090,10 +2090,26 @@
         </div>
 
         <!-- pagination (Rectangle) -->
-        <div id="u178" class="ax_default label disabled" data-label="pagination">
+        <div id="u178" class="ax_default label ax_default_hidden disabled" data-label="pagination" style="display:none; visibility: hidden">
           <div id="u178_div" class="disabled"></div>
           <div id="u178_text" class="text ">
             <p><span>Page 1 of 2</span></p>
+          </div>
+        </div>
+
+        <!-- PREVIOUS (Rectangle) -->
+        <div id="u179" class="ax_default button" data-label="PREVIOUS">
+          <div id="u179_div" class=""></div>
+          <div id="u179_text" class="text ">
+            <p><span>|&lt;</span></p>
+          </div>
+        </div>
+
+        <!-- PREVIOUS (Rectangle) -->
+        <div id="u180" class="ax_default button" data-label="PREVIOUS">
+          <div id="u180_div" class=""></div>
+          <div id="u180_text" class="text ">
+            <p><span>&gt;|</span></p>
           </div>
         </div>
       </div>
