--- a/design/Process-admin/home.html
+++ b/design/Process-admin/home.html
@@ -2071,7 +2071,7 @@
       </div>
 
       <!-- pagination (Group) -->
-      <div id="u175" class="ax_default" data-label="pagination" data-left="627" data-top="778" data-width="272" data-height="25">
+      <div id="u175" class="ax_default" data-label="pagination" data-left="627" data-top="778" data-width="275" data-height="25">
 
         <!-- NEXT (Rectangle) -->
         <div id="u176" class="ax_default button" data-label="NEXT">
@@ -2097,16 +2097,16 @@
           </div>
         </div>
 
-        <!-- PREVIOUS (Rectangle) -->
-        <div id="u179" class="ax_default button" data-label="PREVIOUS">
-          <div id="u179_div" class=""></div>
+        <!-- Beginning (Rectangle) -->
+        <div id="u179" class="ax_default button disabled" data-label="Beginning">
+          <div id="u179_div" class="disabled"></div>
           <div id="u179_text" class="text ">
             <p><span>|&lt;</span></p>
           </div>
         </div>
 
-        <!-- PREVIOUS (Rectangle) -->
-        <div id="u180" class="ax_default button" data-label="PREVIOUS">
+        <!-- End (Rectangle) -->
+        <div id="u180" class="ax_default button" data-label="End">
           <div id="u180_div" class=""></div>
           <div id="u180_text" class="text ">
             <p><span>&gt;|</span></p>
