more nits, scrolling

--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -2598,7 +2598,7 @@
               <div id="u177" class="ax_default button" data-label="load more button">
                 <div id="u177_div" class=""></div>
                 <div id="u177_text" class="text ">
-                  <p><span>LOAD MORE</span></p>
+                  <p><span>Load More</span></p>
                 </div>
               </div>
             </div>
